fixed environment variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,13 @@ services:
     restart: always
     build: .
     environment:
-      - BASE_URL="${BASE_URL}"
-      - PORT="${PORT}"
-      - ACCESS_KEY="${ACCESS_KEY}"
-      - SECRET_KEY="${SECRET_KEY}"
-      - DATABASE_URL="${DATABASE_URL}"
-      - ACCESS_TOKEN_SECRET="${ACCESS_TOKEN_SECRET}"
-      - REFRESH_TOKEN_SECRET="${REFRESH_TOKEN_SECRET}"
+      - BASE_URL=${BASE_URL}
+      - PORT=${PORT}
+      - ACCESS_KEY=${ACCESS_KEY}
+      - SECRET_KEY=${SECRET_KEY}
+      - DATABASE_URL=${DATABASE_URL}
+      - ACCESS_TOKEN_SECRET=${ACCESS_TOKEN_SECRET}
+      - REFRESH_TOKEN_SECRET=${REFRESH_TOKEN_SECRET}
     ports:
       - '3000:3000'
     links:
